--- a/lib/dyn_gw/Makefile
+++ b/lib/dyn_gw/Makefile
@@ -11,7 +11,7 @@ ifeq ($(OS), linux)
 NAME ?= olsrd_dyn_gw.so.0.3
 MYFLAGS ?= -Wall -fPIC -Dlinux -g # Uncomment -g for debugging
 LIBS ?= -lpthread -lc -lm
-CFLAGS ?= -fPIC -Wall -Wmissing-prototypes -Wstrict-prototypes -g -O2
+CFLAGS ?= -fPIC -Wall -Wmissing-prototypes -Wstrict-prototypes -g -O2 -I../../src/ -DOLSR_PLUGIN
 INSTALL_LIB = install -D -m 755 $(NAME) $(LIBDIR)/$(NAME);\
 	      /sbin/ldconfig -n $(LIBDIR)
 all:	plugin
@@ -20,7 +20,7 @@ ifeq ($(OS), fbsd)
 NAME ?= olsrd_dyn_gw.so.0.3
 MYFLAGS ?= -Wall -fPIC -g # Uncomment -g for debugging
 LIBS ?= -lpthread -lc -lm
-CFLAGS ?= -fPIC -Wall -Wmissing-prototypes -Wstrict-prototypes -g -O2
+CFLAGS ?= -fPIC -Wall -Wmissing-prototypes -Wstrict-prototypes -g -O2 -I../../src/ -DOLSR_PLUGIN
 INSTALL_LIB = install -m 755 $(NAME) $(LIBDIR)/$(NAME);\
 	      /sbin/ldconfig
 all:	plugin
@@ -28,7 +28,7 @@ else
 ifeq ($(OS), win32)
 NAME ?= olsrd_dyn_gw.dll
 NAMEFLAGS ?= -o $(NAME)
-CFLAGS ?= -g -O2 -fPIC -DWIN32 -mno-cygwin -I../../src/win32 -Wall -Wmissing-prototypes -Wstrict-prototypes
+CFLAGS ?= -g -O2 -fPIC -DWIN32 -mno-cygwin -I../../src/win32 -Wall -Wmissing-prototypes -Wstrict-prototypes -I../../src/ -DOLSR_PLUGIN
 LDFLAGS ?= -mno-cygwin -shared
 LIBS ?= -lws2_32
 COMPATOBJ = ../../src/win32/compat.o
