--- a/lib/dot_draw/Makefile.win32.in
+++ b/lib/dot_draw/Makefile.win32.in
@@ -3,7 +3,7 @@ OBJS =			src/olsrd_plugin.o \
 
 %.o:			%.c
 			gcc -mno-cygwin -O2 -Wall -c -DWIN32 \
-			-I../../src/win32 -o$@ $<
+			-I../../src/win32 -I../../src -DOLSR_PLUGIN -o$@ $<
 
 olsrd_dot_draw.dll: 	$(OBJS)
 			gcc -mno-cygwin -shared -o olsrd_dot_draw.dll \
