Restructuring for haeder inclusion from olsrd src

--- a/lib/powerinfo/Makefile
+++ b/lib/powerinfo/Makefile
@@ -7,6 +7,7 @@
 
 CC ?= gcc
 STRIP ?= strip
+PLUGINFLAGS =  -fPIC -DOLSR_PLUGIN -I../../src
 
 ifndef OS
 all:		help
@@ -16,9 +17,9 @@ ifeq ($(OS), linux)
 NAME ?= olsrd_power.so.0.3
 LIBDIR ?= $(INSTALL_PREFIX)/usr/lib
 # -fPIC creates position independent code
-MYFLAGS ?= -Wall -fPIC -g # Uncomment -g for debugging
 LIBS ?= -lc -lm
-CFLAGS ?= -fPIC -g -O2
+CFLAGS ?= -Wall -g -O2 $(PLUGINFLAGS)  -Wmissing-prototypes -Wstrict-prototypes
+LDFLAGS ?= -fPIC
 INSTALL_LIB = install -D -m 755 $(NAME) $(LIBDIR)/$(NAME);\
 	/sbin/ldconfig -n $(LIBDIR)
 all:	plugin
@@ -27,19 +28,19 @@ ifeq ($(OS), fbsd)
 NAME ?= olsrd_power.so.0.3
 LIBDIR ?= $(INSTALL_PREFIX)/usr/lib
 # -fPIC creates position independent code
-MYFLAGS ?= -Wall -fPIC -g # Uncomment -g for debugging
 LIBS ?= -lc -lm
-CFLAGS ?= -fPIC -g -O2
+CFLAGS ?= -Wall -g -O2 $(PLUGINFLAGS) -Wmissing-prototypes -Wstrict-prototypes
+LDFLAGS ?= -fPIC
 INSTALL_LIB = install -m 755 $(NAME) $(LIBDIR)/$(NAME);\
 	/sbin/ldconfig
 all:	plugin
 else
 ifeq ($(OS), win32)
 NAME ?= olsrd_power.dll
-MYFLAGS ?= -g -fPIC -DWIN32 -mno-cygwin -I../../src/win32 -Wall -Wmissing-prototypes -Wstrict-prototypes
+MYFLAGS ?= -g -DWIN32 -mno-cygwin -I../../src/win32 -Wall -Wmissing-prototypes -Wstrict-prototypes $(PLUGINFLAGS)
 CFLAGS ?= -O2
 CFLAGS += $(MYFLAGS)
-LDFLAGS ?= -mno-cygwin -shared
+LDFLAGS ?= -mno-cygwin -shared -fPIC
 LIBS ?= -lws2_32
 INSTALL_LIB = 	cp $(NAME) ../..
 else
@@ -65,7 +66,7 @@ HDRS=	src/olsrd_plugin.h src/olsrd_power.h src/olsr_plugin_io.h
 # not 100% sure if this is neccesary
 
 plugin: $(OBJS)
-	$(CC) $(LDFLAGS) $(MYFLAGS) -shared -Wl,-soname,$(NAME) \
+	$(CC) $(LDFLAGS) -shared -Wl,-soname,$(NAME) \
 	-Wl,--version-script=version-script.txt \
 	-o $(NAME) $(OBJS) $(LIBS)
 
