--- a/lib/dyn_gw/Makefile
+++ b/lib/dyn_gw/Makefile
@@ -4,10 +4,6 @@ STRIP ?= strip
 LIBDIR ?= $(INSTALL_PREFIX)/usr/lib
 PLUGINFLAGS = -fPIC -DOLSR_PLUGIN -I../../src
 
-ifndef OS
-all:		help
-endif
-
 ifeq ($(OS), linux)
 NAME ?= olsrd_dyn_gw.so.0.3
 MYFLAGS ?= -fPIC -g # Uncomment -g for debugging
@@ -16,6 +12,7 @@ CFLAGS ?= -Wall -Wmissing-prototypes -Wstrict-prototypes -g -O2
 INSTALL_LIB = install -D -m 755 $(NAME) $(LIBDIR)/$(NAME);\
 	      /sbin/ldconfig -n $(LIBDIR)
 all:	plugin
+install:install_olsrd
 else
 ifeq ($(OS), fbsd)
 NAME ?= olsrd_dyn_gw.so.0.3
@@ -25,6 +22,7 @@ CFLAGS ?= -Wall -Wmissing-prototypes -Wstrict-prototypes -g -O2
 INSTALL_LIB = install -m 755 $(NAME) $(LIBDIR)/$(NAME);\
 	      /sbin/ldconfig
 all:	plugin
+install:install_olsrd
 else
 ifeq ($(OS), win32)
 NAME ?= olsrd_dyn_gw.dll
@@ -34,9 +32,11 @@ LDFLAGS ?= -mno-cygwin -shared
 LIBS ?= -lws2_32
 COMPATOBJ = ../../src/win32/compat.o
 INSTALL_LIB = 	cp $(NAME) ../..
-all:		plugin
+all:	plugin
+install:install_olsrd
 else
 all: 	help
+install:help
 endif
 endif
 endif
@@ -58,7 +58,7 @@ plugin: $(OBJS)
 	-o $(NAME) $(OBJS) $(LIBS)
 
 
-install:
+install_olsrd:
 	$(STRIP) $(NAME)
 	$(INSTALL_LIB)
 clean:
