--- a/lib/httpinfo/Makefile
+++ b/lib/httpinfo/Makefile
@@ -8,10 +8,6 @@ STRIP ?= strip
 LIBDIR ?= $(INSTALL_PREFIX)/usr/lib
 PLUGINFLAGS =  -fPIC -DOLSR_PLUGIN -I../../src
 
-ifndef OS
-all:		help
-endif
-
 ifeq ($(OS), linux)
 NAME ?= olsrd_httpinfo.so.0.1
 NAMEFLAGS ?= -Wl,-soname,$(NAME)
@@ -21,6 +17,7 @@ LIBS ?= -lc -lm
 INSTALL_LIB = 	install -D -m 755 $(NAME) $(LIBDIR)/$(NAME);\
 		/sbin/ldconfig -n $(LIBDIR)
 all:		plugin
+install:        install_olsrd
 else
 ifeq ($(OS), win32)
 NAME ?= olsrd_httpinfo.dll
@@ -31,6 +28,7 @@ LIBS ?= -lws2_32
 COMPATOBJ = ../../src/win32/compat.o
 INSTALL_LIB = 	cp $(NAME) ../..
 all:		plugin
+install:        install_olsrd
 else
 ifeq ($(OS), fbsd)
 NAME ?= olsrd_httpinfo.so.0.1
@@ -41,8 +39,10 @@ LIBS ?= -lc -lm
 INSTALL_LIB = 	install -m 755 $(NAME) $(LIBDIR)/$(NAME);\
 		/sbin/ldconfig
 all:		plugin
+install:        install_olsrd
 else
 all: 	help
+install:help
 endif
 endif
 endif
@@ -73,7 +73,7 @@ plugin: $(OBJS)
 	-o $(NAME) $(OBJS) $(COMPATOBJ) $(LIBS)
 
 
-install:
+install_olsrd:
 	$(STRIP) $(NAME)
 	$(INSTALL_LIB)
 
