another round of Makefile cleanup  - guess the OS (via OS env variable and uname), no need to make OS=xxx    anymore  - seperate OS specific stuff into make/Makefile.$OS  - all Makefiles include Makefile.inc which includes the OS    specifics and provides defaults for about anything  - this removes a lot of copy & paste from all Makefiles  - dependency generation with gcc flags -MD instead of "makedepends"

--- a/lib/Makefile
+++ b/lib/Makefile
@@ -1,69 +1,10 @@
-
-REALOS = $(OS)
-
-ifeq ($(OS), linux)
-
-all:		subdirs
-install:        subdirs
-clean:          subdirs
 SUBDIRS = dot_draw dyn_gw httpinfo nameservice powerinfo secure tas
 
-else
-ifeq ($(OS), win32)
+.PHONY: $(SUBDIRS)
 
-all:		subdirs
-install:        subdirs
-clean:          subdirs
-SUBDIRS = dot_draw dyn_gw httpinfo nameservice powerinfo secure tas
-
-else
-ifeq ($(OS), fbsd)
-
-all:		subdirs
-install:        subdirs
-clean:          subdirs
-SUBDIRS = dot_draw dyn_gw httpinfo nameservice powerinfo secure
-
-else
-ifeq ($(OS), fbsd-ll)
-
-REALOS = fbsd
-all:		subdirs
-install:	subdirs
-clean:          subdirs
-SUBDIRS = dot_draw dyn_gw httpinfo nameservice powerinfo secure
-
-else
-
-all: 		help
-install::	help
-clean:          help
-
-endif
-endif
-endif
-endif
-
-.PHONY:	subdirs $(SUBDIRS)
-
-subdirs:	$(SUBDIRS)
+all: $(SUBDIRS)
+clean: $(SUBDIRS)
+install: $(SUBDIRS)
 
 $(SUBDIRS):
-	$(MAKE) -C $@ OS=$(REALOS) $(MAKECMDGOALS)
-
-help:
-	@echo
-	@echo '******** olsr.org plugin Make *******'
-	@echo ' You must provide a valid target OS '
-	@echo ' by setting the OS variable! Valid  '
-	@echo ' target OSes are:                   '
-	@echo ' ---------------------------------  '
-	@echo ' linux - GNU/Linux                  '
-	@echo ' win32 - MS Windows                 '
-	@echo ' fbsd  - FreeBSD                    '
-	@echo ' ---------------------------------  '
-	@echo ' Example - build for windows:       '
-	@echo ' make OS=win32                      '
-	@echo '************************************'
-	@echo
-
+	$(MAKE) -C $@ $(MAKECMDGOALS)
