removed -lm, not needed anymore

--- a/make/Makefile.fbsd
+++ b/make/Makefile.fbsd
@@ -12,7 +12,7 @@ MANDIR = $(INSTALL_PREFIX)/share/man
 SRCS +=		$(wildcard src/bsd/*.c) $(wildcard src/unix/*.c)
 HDRS +=		$(wildcard src/bsd/*.h) $(wildcard src/unix/*.h)
 
-LIBS =		-lm
+LIBS =		
 
 CFLAGS +=	-DOLSRD_GLOBAL_CONF_FILE=\"$(CFGFILE)\"
 
