--- a/make/Makefile.obsd
+++ b/make/Makefile.obsd
@@ -9,7 +9,7 @@ SRCS +=		$(wildcard src/bsd/*.c) $(wildcard src/unix/*.c)
 HDRS +=		$(wildcard src/bsd/*.h) $(wildcard src/unix/*.h)
 
 DEFINES =	-D__OpenBSD__
-LIBS =		-lm
+LIBS =		
 
 PLUGIN_FULLNAME ?= $(PLUGIN_NAME).so.$(PLUGIN_VER)
 INSTALL_LIB =	install -m 755 $(PLUGIN_FULLNAME) $(LIBDIR)/$(PLUGIN_FULLNAME); \
