--- a/make/Makefile.osx
+++ b/make/Makefile.osx
@@ -9,7 +9,7 @@ SRCS +=		$(wildcard src/bsd/*.c) $(wildcard src/unix/*.c)
 HDRS +=		$(wildcard src/bsd/*.h) $(wildcard src/unix/*.h)
 
 DEFINES =	-D__MacOSX__
-LIBS =		-lm -ldl
+LIBS =		-ldl
 
 PLUGIN_FULLNAME ?= $(PLUGIN_NAME).so.$(PLUGIN_VER)
 INSTALL_LIB =	install -m 755 $(PLUGIN_FULLNAME) $(LIBDIR)/$(PLUGIN_FULLNAME); \
