add -Wl,-export-dynamic to LDFLAGS to allow direct linking of plugins

--- a/Makefile.inc
+++ b/Makefile.inc
@@ -24,11 +24,14 @@ CFLAGS +=	-Wall -Wmissing-prototypes -Wstrict-prototypes \
 CFLAGS +=	-O2 -g
 endif
 
-# c and ld flags for libraries (plugins)
 ifdef OLSRD_PLUGIN
+# c and ld flags for libraries (plugins)
 CFLAGS +=	-DOLSR_PLUGIN -fPIC
 LDFLAGS +=	-shared  -fPIC -Wl,-soname,$(PLUGIN_NAME)
 LDFLAGS +=	-Wl,--version-script=version-script.txt 
+else
+# c and ld flags for main
+LDFLAGS +=	-Wl,-export-dynamic 
 endif
 
 # search sources and headers in current dir and in src/
