- added mini plugin as an example and for testing the new plugin interface - changed plugin_loader to load plugins with old and new interface

--- a/lib/Makefile
+++ b/lib/Makefile
@@ -1,4 +1,4 @@
-SUBDIRS = dot_draw dyn_gw httpinfo nameservice powerinfo secure tas
+SUBDIRS = dot_draw dyn_gw httpinfo mini nameservice powerinfo secure tas
 
 .PHONY: $(SUBDIRS)
 
