Added foundations for command interface and cleaned up

--- a/src/olsr_switch/Makefile
+++ b/src/olsr_switch/Makefile
@@ -2,7 +2,7 @@
 CC ?= gcc
 BINNAME = olsr_switch
 INCLUDES += -I./..
-CFLAGS += -O2 -g $(INCLUDES)
+CFLAGS += -O2 -g $(INCLUDES) -Wall
 LDFLAGS +=
 TOPDIR = ../../
 
