--- a/src/olsr_switch/Makefile
+++ b/src/olsr_switch/Makefile
@@ -2,13 +2,37 @@
 CC ?= gcc
 BINNAME = olsr_switch
 INCLUDES += -I./..
-CFLAGS += -O2 -g $(INCLUDES) -Wall
+CFLAGS += -O2 -g $(INCLUDES) -Wall -MD
 LDFLAGS +=
 TOPDIR = ../../
 
 SRCS =	$(wildcard *.c)
 HDRS =	$(wildcard *.h)
 OBJS =	$(patsubst %.c,%.o,$(SRCS))
+
+
+# OS detection
+OS =		$(shell sh $(TOPDIR)/make/guess_os.sh)
+ifeq ($(OS),UNKNOWN)
+all: help
+else
+ifeq ($(OS),win32)
+WIN32 = 1
+endif
+all: default_target
+endif
+
+help:
+	@echo 
+	@echo '***** olsr.org olsr_switch Make ****'
+	@echo ' Automatic detection of your OS     '
+	@echo ' failed!                            '
+	@echo '************************************'
+	@echo
+
+
+# include dependencies
+-include $(SRCS:%.c=%.d)
 
 ifdef WIN32
 BINNAME = olsr_switch.exe
@@ -18,10 +42,10 @@ SRCS +=	$(TOPDIR)src/win32/compat.c
 LIBS += -mno-cygwin -lws2_32 -liphlpapi
 endif
 
-all: 	$(OBJS)
+default_target:	$(OBJS)
 	$(CC) $(LDFLAGS) -o $(TOPDIR)$(BINNAME) $(OBJS) $(LIBS)
 
 clean:
-	rm -f *.o
+	rm -f *.o *.d
 	rm -f *~
 	rm -f $(TOPDIR)$(BINNAME)
