--- a/src/olsr_switch/Makefile
+++ b/src/olsr_switch/Makefile
@@ -7,6 +7,9 @@ else
 BINNAME = olsr_switch
 endif
 
+LDFLAGS =
+LIBS =
+
 default_target:	$(OBJS)
 	$(CC) $(LDFLAGS) -o $(TOPDIR)/$(BINNAME) $(OBJS) $(LIBS)
 
