--- a/make/Makefile.nbsd
+++ b/make/Makefile.nbsd
@@ -14,3 +14,11 @@ LIBS =
 PLUGIN_FULLNAME ?= $(PLUGIN_NAME).so.$(PLUGIN_VER)
 INSTALL_LIB =	install -m 755 $(PLUGIN_FULLNAME) $(LIBDIR)/$(PLUGIN_FULLNAME); \
 		/sbin/ldconfig
+
+ifdef OLSRD_PLUGIN
+CFLAGS +=	-fPIC
+LDFLAGS +=	-fPIC
+endif
+
+OS_LIB_PTHREAD =
+OS_LIB_DYNLOAD =
