--- a/make/Makefile.wince
+++ b/make/Makefile.wince
@@ -12,3 +12,11 @@ DEFINES =	-DWIN32 -DWINCE
 LIBS =		-lwinsock -liphlpapi
 
 INCLUDES += 	-Isrc/win32 -Isrc/win32/ce
+
+ifdef OLSRD_PLUGIN
+CFLAGS +=	
+LDFLAGS +=	-lolsrd
+endif
+
+OS_LIB_PTHREAD =
+OS_LIB_DYNLOAD =
