--- a/make/Makefile.fbsd
+++ b/make/Makefile.fbsd
@@ -12,14 +12,14 @@ MANDIR = $(INSTALL_PREFIX)/share/man
 SRCS +=		$(wildcard src/bsd/*.c) $(wildcard src/unix/*.c)
 HDRS +=		$(wildcard src/bsd/*.h) $(wildcard src/unix/*.h)
 
-LIBS =		
+LIBS =
 
 CFLAGS +=	-DOLSRD_GLOBAL_CONF_FILE=\"$(CFGFILE)\"
 
 ifdef LIBNET
 
 CFLAGS +=	-DSPOOF -I$(INSTALL_PREFIX)/include
-LIBS =+		-L$(INSTALL_PREFIX)/lib -lnet
+LIBS +=		-L$(INSTALL_PREFIX)/lib -lnet
 
 endif
 
@@ -33,4 +33,4 @@ INSTALL_LIB =	install -m 755 $(PLUGIN_FULLNAME) $(LIBDIR)/$(PLUGIN_FULLNAME); \
 		/sbin/ldconfig
 
 OS_LIB_PTHREAD = -pthread
-OS_LIB_DYNLOAD = 
+OS_LIB_DYNLOAD =
