Added option FBSD_NO_80211 to not include 802.11 spesific code on FreeBSD

--- a/make/Makefile.fbsd
+++ b/make/Makefile.fbsd
@@ -16,6 +16,10 @@ LIBS =
 
 CFLAGS +=	-DOLSRD_GLOBAL_CONF_FILE=\"$(CFGFILE)\"
 
+ifdef NO_80211
+CFLAGS += -DFBSD_NO_80211=1
+endif
+
 ifdef LIBNET
 
 CFLAGS +=	-DSPOOF -I$(INSTALL_PREFIX)/include
