Reanimated OS X port. Any OS X dynamic linking experts? Just tried a couple of options from the ld man page that seemed plausible. Looks okay, but should be verified by somebody that knows what he's doing.

--- a/make/Makefile.osx
+++ b/make/Makefile.osx
@@ -17,7 +17,9 @@ INSTALL_LIB =	install -m 755 $(PLUGIN_FULLNAME) $(LIBDIR)/$(PLUGIN_FULLNAME); \
 
 ifdef OLSRD_PLUGIN
 CFLAGS +=	-fPIC
-LDFLAGS +=	-fPIC
+LDFLAGS =	-fPIC -dynamiclib -single_module -flat_namespace -undefined suppress
+else
+LDFLAGS = -dynamic
 endif
 		
 OS_LIB_PTHREAD =
