--- a/make/Makefile.fbsd
+++ b/make/Makefile.fbsd
@@ -38,3 +38,7 @@ INSTALL_LIB =	install -m 755 $(PLUGIN_FULLNAME) $(LIBDIR)/$(PLUGIN_FULLNAME); \
 
 OS_LIB_PTHREAD = -pthread
 OS_LIB_DYNLOAD =
+
+# Local Variables:
+# mode: makefile
+# End:
