* since the powerinfo directory seems to be gone, it makes no sense to keep it in the directory list

--- a/lib/Makefile
+++ b/lib/Makefile
@@ -1,4 +1,4 @@
-SUBDIRS = dot_draw dyn_gw httpinfo mini nameservice powerinfo secure tas bmf
+SUBDIRS = dot_draw dyn_gw httpinfo mini nameservice secure tas bmf
 
 .PHONY: $(SUBDIRS)
 
