--- a/make/Makefile.obsd
+++ b/make/Makefile.obsd
@@ -2,8 +2,8 @@
 # OPENBSD SPECIFIC CONFIGURATION
 #
 
-INSTALL_PREFIX ?=
-LIBDIR =	$(INSTALL_PREFIX)/usr/lib
+DESTDIR ?=
+LIBDIR =	$(DESTDIR)/usr/lib
 
 SRCS +=		$(wildcard src/bsd/*.c) $(wildcard src/unix/*.c)
 HDRS +=		$(wildcard src/bsd/*.h) $(wildcard src/unix/*.h)
