--- a/make/Makefile.wince
+++ b/make/Makefile.wince
@@ -2,8 +2,8 @@
 # WINDOWS CE SPECIFIC CONFIGURATION
 #
 
-INSTALL_PREFIX ?=
-LIBDIR =	$(INSTALL_PREFIX)/usr/lib
+DESTDIR ?=
+LIBDIR =	$(DESTDIR)/usr/lib
 
 SRCS +=		$(wildcard src/win32/*.c)
 HDRS +=		$(wildcard src/win32/*.h)
