--- a/make/Makefile.linux
+++ b/make/Makefile.linux
@@ -2,12 +2,9 @@
 # LINUX SPECIFIC CONFIGURATION
 #
 
-INSTALL_PREFIX ?=
-ifeq ($(shell arch),x86_64)
-LIBDIR =	$(INSTALL_PREFIX)/usr/lib64
-else
-LIBDIR =	$(INSTALL_PREFIX)/usr/lib
-endif
+ARCH := $(shell uname -m)
+DESTDIR ?=
+LIBDIR =	$(DESTDIR)$(shell [ "$(ARCH)" = "x86_64" && -d "/usr/lib64" ] && echo "/usr/lib64" || echo "/usr/lib")
 
 SRCS += 	$(wildcard src/linux/*.c) $(wildcard src/unix/*.c)
 HDRS +=		$(wildcard src/linux/*.h) $(wildcard src/unix/*.h)
@@ -22,7 +19,7 @@ INSTALL_LIB =	install -D -m 755 $(PLUGIN_FULLNAME) $(LIBDIR)/$(PLUGIN_FULLNAME);
 ifdef OLSRD_PLUGIN
 GENERATE_PIC = true
 endif
-ifeq ($(shell arch),x86_64)
+ifeq ($(ARCH),x86_64)
 GENERATE_PIC = true
 endif
 
